[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "homeharvest-mcp"
version = "0.1.0"
description = "MCP server for HomeHarvest real estate scraping"
authors = [
    {name = "Zachary Hampton", email = "zachary@bunsly.com"}
]

requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.13.1",
    "smithery>=0.1.24",
    "homeharvest>=0.6.1",
]

[project.scripts]
# Run the MCP server in development mode
dev = "smithery.cli.dev:main"
# Run server with interactive testing playground
playground = "smithery.cli.playground:main"

[tool.smithery]
# Function that returns a patched FastMCP server
server = "homeharvest_mcp.server:create_server"


